<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/top_img"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



        <TextView
            android:id="@+id/rentTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:text="@string/rent"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintBottom_toTopOf="@+id/monthlyrentTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5" />

        <TextView
            android:id="@+id/monthlyrentTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:padding="@dimen/_5sdp"
            android:text="@string/rentmonth"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rentTV"
            app:layout_constraintWidth_percent="0.5" />

        <Button
            android:id="@+id/addcart_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/_10sdp"
           android:text="@string/addcart_button"
            android:backgroundTint="@color/white"
            android:textAllCaps="false"
           android:textColor="@color/appcolor"
            android:layout_marginRight="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rentTV"
            app:layout_constraintTop_toTopOf="parent"
           />

</androidx.constraintlayout.widget.ConstraintLayout>